refactor: Move generated files to generated/ folder
- Configure TypeScript to output compiled files to generated/ folder
- Update .gitignore to exclude generated/ folder and CDK build artifacts
- Add clean and build scripts to package.json for better development workflow
- Remove old generated files from source directories
- Test CDK synthesis works with new folder structure

Benefits:
- Clean separation between source code and generated files
- Better IDE experience with less file clutter
- Proper build artifact organization
- Easier repository management with .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,11 @@ logs/
 # Node modules (for infra)
 infra/node_modules/
 
+# CDK generated files
+infra/generated/
+infra/**/*.js
+infra/**/*.d.ts
+infra/cdk.out/
+
 # LocalStack data
 .localstack/
