--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -23,7 +23,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "outDir": "./generated",
+    "declarationDir": "./generated"
   },
-  "exclude": ["node_modules", "cdk.out", "coverage", ".nyc_output"]
+  "exclude": ["node_modules", "cdk.out", "coverage", ".nyc_output", "generated"]
 }
